@@ -1,3 +1,8 @@
+2018-05-04 Marco Bodrato <bodrato@mail.dm.unipi.it>
+
+	* doc/gmp.texi (mpq_*_str): Document the full base allowed range.
+	* mpq/get_str.c: Make all bases either work or return an error.
+
 2018-04-27  Niels Möller  <nisse@lysator.liu.se>
 
 	* mpn/generic/div_q.c (mpn_div_q): Replace dead code with ASSERT.
